digiKam 6.2.0 - Release date: 2019-06-??

*****************************************************************************************************
NEW FEATURES:

IconView : HiDPI support for 4K screens.

*****************************************************************************************************
BUGFIXES:

001 ==> 279216 - "Resize image" feature is missing some useful options [patch].
002 ==> 406581 - "No such album" when dragging duplicated Tag to merge them.
003 ==> 406585 - Feature request: clean or hide empty Tags.
004 ==> 389657 - QFile::rename: Empty or null file name.
005 ==> 406610 - Hit enter when renaming, sometime don't rename correctly.
006 ==> 406637 - Duplicates "Search in" Doesn't Show Collection Name Upon First Selection.
007 ==> 406226 - Adding tags to a selection from a large list of no-tags images takes a very long time.
008 ==> 374302 - MYSQL : all Images with Geoinfo seem to be at (0°, 0°).
009 ==> 406815 - Can not setup Thunderbid in Send by mail.
010 ==> 406855 - Feature request: date from filename.
011 ==> 406938 - Face region is not saved after resizing.
012 ==> 406942 - Thumbnails does not get saved for videofiles over 2^64b, mysql.
013 ==> 406981 - GoPro video thumbnails are just noise.
014 ==> 407043 - Image rename to folder fails on Windows.
015 ==> 407157 - Lens Auto-Correction for fixed-lens cameras
016 ==> 407197 - Target album does not exist.
017 ==> 371005 - Zoom function doesn't work properly on HiDPI Display
018 ==> 407233 - Pictures distribution on Light Table.
019 ==> 